<resources>
    <string name="app_name">Liike Gomi</string>
    <string name="shopping_cart">Carrito de compra</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="login">Ingresar</string>
    <string name="create_account">Crear cuenta</string>
    <string name="o">O</string>
    <string name="name">Nombre(s)</string>
    <string name="last_name">Apellido(s)</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="birth_date">Fecha de nacimiento</string>
    <string name="phone_number">Número de celular</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="password_criteria">Debe contener al menos: \n- 8 Caracteres \n- Una mayúscula\n- Una minúscula\n- Un número\n- Un símbolo: <b><i>.-_*!</i></b></string>
    <string name="edit_perfil">Editar perfil</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="purchases">Compras</string>
    <string name="my_purchases">Mis compras</string>
    <string name="home">Inicio</string>
    <string name="profile">Perfil</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="price_">Precio:</string>
    <string name="add_to_cart">Agregar al carrito</string>
    <string name="add_new_product">Agregar nuevo producto</string>
    <string name="product_name">Nombre del producto</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="stock_quantity">Cantidad en stock</string>
    <string name="category">Categoría</string>
    <string name="take_photo">Tomar fotografía</string>
    <string name="select_from_gallery">Seleccionar de galería</string>
    <string name="add_photo">Agregar fotografía</string>
    <string name="visible">Visible</string>
    <string name="no_products_found">No se encontraron productos para esta categoría</string>
    <string name="admin_options">Opciones de administrador</string>
    <string name="add_user_admin">Agregar usuario (admin)</string>
    <string name="add_category">Agregar categoría</string>
    <string name="add_product">Agregar producto</string>
    <string name="administrate_users">Administrar/ver usuarios</string>
    <string name="my_sells">Mis ventas</string>
    <string name="category_name">Nombre de la categoría</string>
    <string name="btn_create_label">Crear</string>
    <string name="administrate_categories">Administrar/ver categorías</string>
    <string name="administrate_products">Administrar/ver productos</string>
    <string name="update_name">Actualizar nombre</string>
    <string name="delete">Eliminar</string>
    <string name="administrate_category">Administrar categorías</string>
    <string name="update_info">Actualizar información</string>
    <string name="administrate_product">Administrar productos</string>
    <string name="cart">Carrito</string>
    <string name="minus">Restar</string>
    <string name="pay">Pagar</string>
    <string name="total_">Total:</string>
    <string name="no_items_on_cart">No tienes gomitas en tu carrito 😔</string>
    <string name="payment">Pago</string>
    <string name="address_shipping">Dirección de envío</string>
    <string name="transfer_text">Haz tu transferencia a la cuenta CLABE:\n<b>1278 9901 3836 1702 14</b>.\nUna vez hayas realizado la transferencia envía tu comprobante al número:\n<b>+52 783 128 0145</b></string>
    <string name="contact">Contacto</string>
</resources>