<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_my_purchases"
            android:icon="@drawable/ic_shopping_bag"
            android:title="@string/my_purchases" />
    </group>

    <item
        android:id="@+id/admin_menu_options"
        android:title="@string/admin_options"
        android:visible="false">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_admin_add_admin"
                    android:icon="@drawable/ic_person_add"
                    android:title="@string/add_user_admin" />
                <item
                    android:id="@+id/nav_admin_add_category"
                    android:icon="@drawable/ic_library_add"
                    android:title="@string/add_category" />
                <item
                    android:id="@+id/nav_admin_add_product"
                    android:icon="@drawable/ic_post_add"
                    android:title="@string/add_product" />
                <item
                    android:id="@+id/nav_admin_administrate_users"
                    android:icon="@drawable/ic_supervised_user_circle"
                    android:title="@string/administrate_users" />
                <item
                    android:id="@+id/nav_admin_categories_list"
                    android:icon="@drawable/ic_category"
                    android:title="@string/administrate_categories" />
                <item
                    android:id="@+id/nav_admin_products_list"
                    android:icon="@drawable/ic_shopping_basket"
                    android:title="@string/administrate_products" />
                <item
                    android:id="@+id/nav_admin_purchases_list"
                    android:icon="@drawable/ic_format_list_bulleted"
                    android:title="@string/my_sells" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_close_session"
        android:icon="@drawable/ic_close_session"
        android:title="@string/close_session" />

</menu>